<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Channel Id"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvChannelId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/submenu_background"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"
            android:text="@string/channel_id"
            android:textSize="20dp"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnGetProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_profile" />

        <Button
            android:id="@+id/btnGetCurrentAccessToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_current_access_token" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout" />

        <Button
            android:id="@+id/btnGetBotFriendshipStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_bot_friendship_status" />

        <Button
            android:id="@+id/btnRefreshAccessToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh_access_token" />

        <Button
            android:id="@+id/btnRevokeAccessToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="@string/revoke_access_token" />

        <Button
            android:id="@+id/btnVerifyAccessToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh_access_token" />
    </LinearLayout>
</ScrollView>
